kube-manifest/Global/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-indri
  labels:
    project: indri
    env: dev
    owner: nd
    team: platform
    cost-center: nd
spec:
